fix: align logo and store title

--- a/styles.css
+++ b/styles.css
@@ -23,8 +23,12 @@ td {
     flex: 1;
 }
 
+#header {
+    display: flex;
+    align-items: center;
+}
+
 #header img {
-    float: left;
     width: 50px;
     height: 50px;
 }
